@@ -1,5 +1,5 @@
 
-monodevelopdir = $(prefix)/lib/monodevelop
+monodevelopdir = $(libdir)/monodevelop
 cssdir = $(monodevelopdir)/data/resources/css
 
 css_DATA = MsdnHelp.css SharpDevelopStandard.css
